fix margin footer on mobile

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -158,6 +158,7 @@ $section-padding: 1rem 1.5rem;
     }
 
     footer.footer {
+        margin-top: 40px;
         background-color:darken($darkColor, 5%);
         color:$lightColor;
 
@@ -331,6 +332,7 @@ $section-padding: 1rem 1.5rem;
     }
 
     footer.footer {
+        margin-top: 40px;
         background-color:darken($lightColor, 10%);
         color:$darkColor;
 
